--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,69 +7,61 @@
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/large_margin"
         android:background="@drawable/card_background"
-        android:orientation="horizontal"
-
-        >
+        android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginHorizontal="12dp"
+            android:layout_marginHorizontal="@dimen/medium_margin"
             android:elevation="0dp"
-            app:cardCornerRadius="8dp"
-
-            >
+            app:cardCornerRadius="@dimen/card_corner_radius">
 
             <ImageView
                 android:layout_width="93dp"
                 android:layout_height="93dp"
-
                 android:src="@drawable/daniel"
-
-
                 />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/medium_margin"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/dmsans_bold"
-                android:text="Ahmed hassan"
+                android:text="@string/user_name"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_large_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/margin_small"
                 android:fontFamily="@font/dmsans_medium"
-                android:text="Engineer"
+                android:text="@string/role"
                 android:textColor="@color/secondary_text_color"
-                android:textSize="12sp" />
+                android:textSize="@dimen/text_small_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:drawableStart="@drawable/ic_location"
-                android:drawablePadding="4dp"
+                android:layout_marginTop="@dimen/margin_small"
+                android:drawablePadding="@dimen/padding_small"
                 android:fontFamily="@font/dmsans_regular"
-                android:text="UK"
+                android:text="@string/country_name"
                 android:textColor="@color/location_text_color"
-                android:textSize="13sp" />
+                android:textSize="@dimen/text_medium_size"
+                app:drawableStartCompat="@drawable/ic_location" />
 
 
             <LinearLayout
@@ -79,22 +71,22 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="11dp"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:layout_marginBottom="@dimen/margin_small_plus"
                     android:fontFamily="@font/dmsans_regular"
-                    android:textColor="@color/black"
-                    android:text="(150 Reviews)" />
+                    android:text="@string/reviews_counter"
+                    android:textColor="@color/black" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="@dimen/margin_small"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:layout_marginBottom="@dimen/margin_small_plus"
                     android:fontFamily="@font/dmsans_medium"
+                    android:text="@string/rating_ratio"
                     android:textColor="@color/black"
-                    android:layout_marginBottom="11dp"
-                    android:drawableEnd="@drawable/star_4"
-                    android:text="4.5 " />
+                    app:drawableEndCompat="@drawable/star_4" />
 
             </LinearLayout>
 
@@ -104,40 +96,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/medium_margin"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginEnd="8dp"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/margin_small"
                 android:background="@drawable/time_background"
                 android:fontFamily="@font/dmsans_regular"
-                android:paddingHorizontal="8dp"
-                android:paddingVertical="4dp"
-                android:text="3 hr"
+                android:paddingHorizontal="@dimen/padding_medium"
+                android:paddingVertical="@dimen/padding_small"
+                android:text="@string/hours_counter"
                 android:textColor="@color/white"
-                android:textSize="12sp" />
+                android:textSize="@dimen/text_small_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
                 android:fontFamily="@font/dmsans_medium"
-                android:text="Russian"
+                android:text="@string/native_country"
                 android:textColor="@color/russian" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginEnd="@dimen/margin_small"
                 android:fontFamily="@font/dmsans_regular"
-                android:text="5 days ago"
+                android:text="@string/days_ago_counter"
                 android:textColor="@color/fivedaysago" />
 
         </LinearLayout>
